--- a/chat/html/index.html
+++ b/chat/html/index.html
@@ -37,8 +37,8 @@ $(document).ready(function() {
 
         author = $("author", message).text();
         content = $("text", message).text();
-        console.log($("timestamp", message).text());
-        $("#messagewindow").prepend("<b>" + author + "</b>:" + content 
+        var date = new Date(timestamp * 1000);
+        $("#messagewindow").prepend(date.toLocaleTimeString() + " <b> " + author + "</b>: " + content
                                     + "<br>");
      });
   };
